--- a/src/main/resources/templates/notice/notice-writeForm.html
+++ b/src/main/resources/templates/notice/notice-writeForm.html
@@ -82,15 +82,11 @@
   </main>
 </div>
 <!--Basic structure of footer-->
-<footer>
-
+<footer class="footer">
   <!--The main area of the footer -->
   <div class="footer-content">
-
     <a href="">GR<span>EAT</span></a>
-
     <p>이 페이지는 울산지역의 한정으로 만들어진 사이트입니다. 서비스를 이용하시는 모든 회원분들 이용에 감사드립니다. 더더욱 발전하는 GREAT이 되겠습니다. </p>
-
     <!--Footer's social icon-->
     <ul class="socials">
       <li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -98,7 +94,6 @@
       <li><a href="#"><i class="fa fa-youtube"></i></a></li>
     </ul>
     <p>GREAT센터 365일 오전 10시 - 오후 6시</p>
-
     <!-- Footer's menu item-->
     <div class="footer-menu">
       <ul class="f-menu">
@@ -107,17 +102,13 @@
         <li><a href="">Order</a></li>
         <li><a href="">Notice</a></li>
       </ul>
-
     </div>
-
   </div>
-
   <!--Copyright Area-->
   <div class="footer-bottom">
     <p>Design By - <a href="#">365 Team Project</a> </p>
     <p>tell :<a href="">1501-1501</a></p>
   </div>
-
 </footer>
 </body>
 </html>
