--- a/src/main/resources/templates/notice/nmainForm.html
+++ b/src/main/resources/templates/notice/nmainForm.html
@@ -85,7 +85,7 @@
             <tr>
               <td><input type="checkbox" class="check"></td>
               <td>5</td>
-              <th><a onclick="location.href='notice board-view.html'" href="#!">[공지사항] 개인정보 처리방침 변경안내처리방침</a></th>
+              <th><a onclick="location.href='notice board-view.html'" href="#">[공지사항] 개인정보 처리방침 변경안내처리방침</a></th>
               <td>2022.08.08</td>
               <td>관리자</td>
               <td>10</td>
@@ -94,7 +94,7 @@
             <tr>
               <td><input type="checkbox" class="check"></td>
               <td>4</td>
-              <th><a onclick="location.href='notice board-view.html'" href="#!">공지사항 안내입니다. 이용해주셔서 감사합니다</a></th>
+              <th><a onclick="location.href='notice board-view.html'" href="#">공지사항 안내입니다. 이용해주셔서 감사합니다</a></th>
               <td>2022.07.25</td>
               <td>관리자</td>
               <td>20</td>
@@ -103,7 +103,7 @@
             <tr>
               <td><input type="checkbox" class="check"></td>
               <td>3</td>
-              <th><a onclick="location.href='notice board-view.html'" href="#!">공지사항 안내입니다. 이용해주셔서 감사합니다</a></th>
+              <th><a onclick="location.href='notice board-view.html'" href="#">공지사항 안내입니다. 이용해주셔서 감사합니다</a></th>
               <td>2022.07.15</td>
               <td>관리자</td>
               <td>30</td>
@@ -111,7 +111,7 @@
             <tr>
               <td><input type="checkbox" class="check"></td>
               <td>2</td>
-              <th><a onclick="location.href='notice board-view.html'" href="#!">공지사항 안내입니다. 이용해주셔서 감사합니다</a></th>
+              <th><a onclick="location.href='notice board-view.html'" href="#">공지사항 안내입니다. 이용해주셔서 감사합니다</a></th>
               <td>2022.06.25</td>
               <td>관리자</td>
               <td>40</td>
@@ -119,7 +119,7 @@
             <tr>
               <td><input type="checkbox" class="check"></td>
               <td>1</td>
-              <th><a onclick="location.href='notice board-view.html'" href="#!">공지사항 안내입니다. 이용해주셔서 감사합니다</a></th>
+              <th><a onclick="location.href='notice board-view.html'" href="#">공지사항 안내입니다. 이용해주셔서 감사합니다</a></th>
               <td>2022.06.15</td>
               <td>관리자</td>
               <td>50</td>
