--- a/src/main/resources/templates/notice/notice-main-mForm.html
+++ b/src/main/resources/templates/notice/notice-main-mForm.html
@@ -80,7 +80,7 @@
             <tr>
 
               <td>5</td>
-              <th><a onclick="location.href='notice board-view member.html'" href="#!">[공지사항] 개인정보 처리방침 변경안내처리방침</a></th>
+              <th><a onclick="location.href='notice board-view member.html'" href="#">[공지사항] 개인정보 처리방침 변경안내처리방침</a></th>
               <td>2022.08.08</td>
               <td>관리자</td>
               <td>10</td>
@@ -89,7 +89,7 @@
             <tr>
 
               <td>4</td>
-              <th><a onclick="location.href='notice board-view member.html'" href="#!">공지사항 안내입니다. 이용해주셔서 감사합니다</a></th>
+              <th><a onclick="location.href='notice board-view member.html'" href="#">공지사항 안내입니다. 이용해주셔서 감사합니다</a></th>
               <td>2022.07.25</td>
               <td>관리자</td>
               <td>20</td>
@@ -98,7 +98,7 @@
             <tr>
 
               <td>3</td>
-              <th><a onclick="location.href='notice board-view member.html'" href="#!">공지사항 안내입니다. 이용해주셔서 감사합니다</a></th>
+              <th><a onclick="location.href='notice board-view member.html'" href="#">공지사항 안내입니다. 이용해주셔서 감사합니다</a></th>
               <td>2022.07.15</td>
               <td>관리자</td>
               <td>30</td>
@@ -106,7 +106,7 @@
             <tr>
 
               <td>2</td>
-              <th><a onclick="location.href='notice board-view member.html'" href="#!">공지사항 안내입니다. 이용해주셔서 감사합니다</a></th>
+              <th><a onclick="location.href='notice board-view member.html'" href="#">공지사항 안내입니다. 이용해주셔서 감사합니다</a></th>
               <td>2022.06.25</td>
               <td>관리자</td>
               <td>40</td>
@@ -114,7 +114,7 @@
             <tr>
 
               <td>1</td>
-              <th><a onclick="location.href='notice board-view member.html'" href="#!">공지사항 안내입니다. 이용해주셔서 감사합니다</a></th>
+              <th><a onclick="location.href='notice board-view member.html'" href="#">공지사항 안내입니다. 이용해주셔서 감사합니다</a></th>
               <td>2022.06.15</td>
               <td>관리자</td>
               <td>50</td>
