팀프로젝트 스트링

--- a/src/main/resources/templates/notice/notice-writeForm.html
+++ b/src/main/resources/templates/notice/notice-writeForm.html
@@ -74,8 +74,8 @@
         </div>
       </div>
       <div class="notice-board__complete width--1000px">
-        <button onclick="location.href='notice board-main.html'" class="notice-board__cancel-btn">취소</button>
-        <button onclick="location.href='notice board-view.html'" class="notice-board__complete-btn">등록</button>
+        <button onclick="location.href='nmain.html'" class="notice-board__cancel-btn">취소</button>
+        <button onclick="location.href='nview.html'" class="notice-board__complete-btn">등록</button>
       </div>
     </div>
 
