--- a/src/main/resources/templates/notice/noticeViewForm.html
+++ b/src/main/resources/templates/notice/noticeViewForm.html
@@ -8,10 +8,7 @@
   <script src="https://kit.fontawesome.com/844acb7e4d.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="/css/notice/notice board-view.css">
   <link rel="stylesheet" href="/css/common/common.css">
-
-  <title>공지사항 글보기화면</title>
-</head>
-
+  <title>GREAT 공지사항 작성글보기</title>
 <body>
 <div class="wrapper">
   <header class="header container">
@@ -54,9 +51,11 @@
     </nav>
   </header>
   <main class="container">
-    <div class="article ">
+    <form class="article " method="post" th:object="${writeForm}">
       <div class="article__title ">
-        <h2>글 제목 : <text>[공지사항] 개인정보 처리방침 변경안내처리방침</text></h2>
+        <h2>글 제목 :
+          <text th:text="*{title}">[공지사항] 개인정보 처리방침 변경안내처리방침</text>
+        </h2>
       </div>
       <div class="article__information">
         <div class="article__write-information">
@@ -65,72 +64,67 @@
           <span class="font-size--12px">조회 18</span>
         </div>
       </div>
-
-
       <div class="article__content ">
-          <textarea cols="140" rows="30"
+          <textarea th:text="*{content}" cols="140" rows="30"
                     name="content">[공지사항] 개인정보 처리방침 변경안내처리방침[공지사항] 개인정보 처리방침 변경안내처리방침[공지사항] 개인정보 처리방침 변경안내처리방침[공지사항] 개인정보 처리방침 변경안내처리방침[공지사항] 개인정보 처리방침 변경안내처리방침[공지사항] 개인정보 처리방침 변경안내처리방침[공지사항] 개인정보 처리방침 변경안내처리방침[공지사항] 개인정보 처리방침 변경안내처리방침[공지사항] 개인정보 처리방침 변경안내처리방침[공지사항] 개인정보 처리방침 변경안내처리방침[공지사항] 개인정보 처리방침 변경안내처리방침[공지사항] 개인정보 처리방침 변경안내처리방침[공지사항] 개인정보 처리방침 변경안내처리방침[공지사항] 개인정보 처리방침 변경안내처리방침[공지사항] 개인정보 처리방침 변경안내처리방침[공지사항] 개인정보 처리방침 변경안내처리방침[공지사항] 개인정보 처리방침 변경안내처리방침[공지사항] 개인정보 처리방침 변경안내처리방침[공지사항] 개인정보 처리방침 변경안내처리방침 </textarea>
-
-
         <div class="article__btn-box">
-          <button onclick="location.href='notice board-Modify.html'" class="Modify">수정</button>
-          <button onclick="location.href='notice board-main.html'" class="submit">목록</button>
+          <button id="modify_btn">수정</button>
+          <button type="button" id="submit_btn">목록</button>
           <button type="button" onclick="button_event();" class="delete">삭제</button>
         </div>
       </div>
-
-      </form>
-    </div>
-</div>
-</div>
-</main>
-<!--Basic structure of footer-->
-<footer>
-
-  <!--The main area of the footer -->
-  <div class="footer-content">
-
-    <a href="">GR<span>EAT</span></a>
-
-    <p>이 페이지는 울산지역의 한정으로 만들어진 사이트입니다. 서비스를 이용하시는 모든 회원분들 이용에 감사드립니다. 더더욱 발전하는 GREAT이 되겠습니다. </p>
-
-    <!--Footer's social icon-->
-    <ul class="socials">
-      <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-      <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-      <li><a href="#"><i class="fa fa-youtube"></i></a></li>
-    </ul>
-    <p>GREAT센터 365일 오전 10시 - 오후 6시</p>
-
-    <!-- Footer's menu item-->
-    <div class="footer-menu">
-      <ul class="f-menu">
-        <li><a href="">Home</a></li>
-        <li><a href="">Join</a></li>
-        <li><a href="">Order</a></li>
-        <li><a href="">Notice</a></li>
+    </form>
+  </main>
+  <!--Basic structure of footer-->
+  <footer class="footer">
+    <!--The main area of the footer -->
+    <div class="footer-content">
+      <a href="">GR<span>EAT</span></a>
+      <p>이 페이지는 울산지역의 한정으로 만들어진 사이트입니다. 서비스를 이용하시는 모든 회원분들 이용에 감사드립니다. 더더욱 발전하는 GREAT이 되겠습니다. </p>
+      <!--Footer's social icon-->
+      <ul class="socials">
+        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+        <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+        <li><a href="#"><i class="fa fa-youtube"></i></a></li>
       </ul>
-
+      <p>GREAT센터 365일 오전 10시 - 오후 6시</p>
+      <!-- Footer's menu item-->
+      <div class="footer-menu">
+        <ul class="f-menu">
+          <li><a href="">Home</a></li>
+          <li><a href="">Join</a></li>
+          <li><a href="">Order</a></li>
+          <li><a href="">Notice</a></li>
+        </ul>
+      </div>
     </div>
-
-  </div>
-
-  <!--Copyright Area-->
-  <div class="footer-bottom">
-    <p>Design By - <a href="#">365 Team Project</a> </p>
-    <p>tell :<a href="">1501-1501</a></p>
-  </div>
-
-</footer>
-
+    <!--Copyright Area-->
+    <div class="footer-bottom">
+      <p>Design By - <a href="#">365 Team Project</a></p>
+      <p>tell :<a href="">1501-1501</a></p>
+    </div>
+  </footer>
+</div>
 <script>
-       function button_event() {
+    //수정버튼
+   const $modifyBtn = document.getElementById('modify_btn');
+    $modifyBtn.addEventListener('click', e => {
+      location.href = '/notice/{id}/edit}';
+    });
+
+    //목록버튼
+    const $submitBtn = document.getElementById('submit_btn');
+      $submitBtn.addEventListener('click', e => {
+      location.href = '/notice';
+    });
+
+    function button_event() {
       if (confirm("정말 삭제하시겠습니까??") == true) {    //확인
         document.form.submit();
       } else {   //취소
         return;
       }
     }
-  </script>
+</script>
 </body>
 </html>
