--- a/src/main/resources/static/css/notice/noticeView.css
+++ b/src/main/resources/static/css/notice/noticeView.css
@@ -1,145 +1,67 @@
 @charset "utf-8";
 
-.container {
-  width: 1100px;
-  margin: 0 auto;
-}
-
-.width--800px {
-  width: 800px;
-}
-
-input:focus {
-  outline: none;
-}
-
-textarea:focus {
-  outline: none;
-}
-
-button:hover {
-  cursor: pointer;
-}
-
-.board__write__content {
-  margin-top: 10px;
-}
-
-.board-write__content{
-  margin-top: 10px;
-}
-
-/* board-write */
-
-.board-write {
+.page-title {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin: 100px 0px 200px 0px;
+  justify-content: flex-start;
 }
 
-/* board-write__title */
-.board-write__title {
-  border-bottom: 1px solid black;
-}
-
-.bar {
+.notice__write-information {
   display: flex;
-  width: 4px;
-  height: 36px;
-  background-color: var(--main-color-yel);
-  margin-right: 10px;
-}
-
-.board-write__title h2 {
-  display: flex;
-  font-size: 28px;
-  color: #333333;
-  font-weight: bold;
-  margin-top: 20px;
-  text-align: center;
-}
-
-/* board-write__article-head */
-.board-write__head {
-  display: flex;
-  margin: 20px 0;
-}
-
-.board-write__title {
-  display: flex;
-  flex: none;
-  align-items: baseline;
-  font-weight: bold;
-  font-size: 15px;
-}
-
-.board-write__title input {
-  flex: none;
+  justify-content: end;
   margin-bottom: 10px;
-  width: 870px;
-  box-sizing: border-box;
-  height: 30px;
-  border: 1px solid var(--mainBtn-color-gre);
 }
 
-/* board-write__tool */
-
-.board-write__tool {
-  background-color: var(--main-color-gre);
-}
-
-.board-write__tool-box ul {
+.notice input {
   display: flex;
-  align-items: center;
-  height: 30px;
+  justify-content: flex-start;
 }
 
-.board-write__tool-box ul li button {
-  border: none;
-}
-
-.board-write__tool-box ul li select {
-  background-color: var(--main-color-gre);
-  border: none;
-}
-
-/* board-write__article-main */
-.board-write__article-content {
-  width: 100%;
-  height: 500px;
-  border: 1px solid var(--mainBtn-color-gre);
-  box-sizing: border-box;
-  resize: none;
-}
-
-/* board-witre__complete */
-.board-witre__complete {
+.notice__btn-box {
   display: flex;
-  justify-content: flex-end;
+  justify-content: end;
+  /* padding: 2px; */
 }
-
-.board-witre__complete button {
+.Modify,
+.delete,
+.submit {
+  background-color: var(--main-color-yel);
   width: 60px;
   height: 25px;
   margin: 5px 0 10px 5px;
   border: none;
   border-radius: 8px;
   font-weight: bold;
+  cursor: pointer;
 }
 
-.board-write__file input {
+.notice__title {
+  border-bottom: 1px solid black;
+}
+
+.notice__file {
+  width: 10px;
+  height: 4px;
+}
+
+.bt_se {
   display: flex;
-  justify-content: flex-start;
+  justify-content: end;
 }
 
-.board-witre__cancel-btn {
-  background-color: var(--mainBtn-color-gre);
+.container {
+  padding: 10px;
 }
 
-.board-witre__complete-btn {
-  background-color: var(--main-color-yel);
+#uncontent {
+  width: 40vw;
+  height: 20px;
 }
+
+#ucontent {
+  width: 80vw;
+  height: 500px;
+}
+
 
 /* footer{
   bottom: 0;
