--- a/src/main/resources/templates/notice/noticeModifyForm.html
+++ b/src/main/resources/templates/notice/noticeModifyForm.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://kit.fontawesome.com/844acb7e4d.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="/css/notice/notice board-modify.css">
+  <link rel="stylesheet" href="/css/notice/noticeModify.css">
   <link rel="stylesheet" href="/css/common/common.css">
   <title>공지사항 수정화면</title>
 </head>
@@ -53,38 +53,32 @@
     </nav>
   </header>
   <main class="container">
-    <form class="board-write__content" method="post" >
+    <form class="board-write__content" method="post" th:object="${editForm}">
       <div class="board-write__title width--1000px">
         <h2><i class="bar"></i>글수정</h2>
       </div>
-      <div class="board-write__head width--1000px">
-        <div class="board-write__title">제목:
-          <input th:text="*{title}" type="text" name="" id="" placeholder="제목을 입력하세요." autofocus>
-        </div>
+      <div class="board-write__notice-main width--900px">
+        <input type="text" id="noticeTitle" placeholder="제목을 입력하세요." autofocus>
       </div>
-      <div class="board-write__article-main width--1000px">
-          <textarea th:text="*{content}" class="board-write__article-content" name="" id="" cols="30" rows="10" placeholder="내용을 작성하세요."
-                    autofocus></textarea>
+      <div class="board-write__notice-main width--900px">
+          <textarea class="board-write__notice-content" id="noticeContents" cols="30" rows="10"
+                    placeholder="내용을 작성하세요." autofocus></textarea>
         <text><input type="file" name="SelectFile"/></text>
       </div>
 
-      <div class="board-witre__complete width--1000px">
-        <button type="button" id="write__cancel-btn">취소</button>
-        <button id="write__complete-btn">수정</button>
+      <div class="board-write__complete width--1000px"
+      th:action="@{/notice/{id}(id=${editForm.noticeId})}">
+        <button type="button" id="cancelBtn"><a href="">취소</a></button>
+        <button type="button" id="modifyBtn">수정</button>
       </div>
     </form>
-
   </main>
   <!--Basic structure of footer-->
-  <footer>
-
+  <footer class="footer">
     <!--The main area of the footer -->
     <div class="footer-content">
-
       <a href="">GR<span>EAT</span></a>
-
       <p>이 페이지는 울산지역의 한정으로 만들어진 사이트입니다. 서비스를 이용하시는 모든 회원분들 이용에 감사드립니다. 더더욱 발전하는 GREAT이 되겠습니다. </p>
-
       <!--Footer's social icon-->
       <ul class="socials">
         <li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -92,7 +86,6 @@
         <li><a href="#"><i class="fa fa-youtube"></i></a></li>
       </ul>
       <p>GREAT센터 365일 오전 10시 - 오후 6시</p>
-
       <!-- Footer's menu item-->
       <div class="footer-menu">
         <ul class="f-menu">
@@ -101,26 +94,28 @@
           <li><a href="">Order</a></li>
           <li><a href="">Notice</a></li>
         </ul>
-
       </div>
-
     </div>
-
     <!--Copyright Area-->
     <div class="footer-bottom">
       <p>Design By - <a href="#">365 Team Project</a></p>
       <p>tell :<a href="">1501-1501</a></p>
     </div>
-  </footer>
+</footer>
 </div>
-<script>
-    const $cancelBtn = document.getElementById('witre__cancel-btn');
+</div>
+<script th:inline="javascript">
+    //취소 버튼 클릭
+    const $cancelBtn = document.getElementById('cancelBtn');
      $cancelBtn.addEventListener('click', e => {
-      location.href = '/notice/write';
+      location.href = '/notice/[[${editForm.noticeId}]]';
     });
-    const $completeBtn = document.getElementById('write__complete-btn');
+
+
+    //수정버튼 클릭
+    const $completeBtn = document.getElementById('modifyBtn');
      $completeBtn.addEventListener('click', e => {
-      location.href = '/notice';
+      location.href = '/notice/[[${editForm.noticeId}]]';
     });
 </script>
 </body>
