--- a/src/main/resources/templates/notice/noticeViewForm.html
+++ b/src/main/resources/templates/notice/noticeViewForm.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://kit.fontawesome.com/844acb7e4d.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="/css/notice/notice board-view.css">
+  <link rel="stylesheet" href="/css/notice/noticeView.css">
   <link rel="stylesheet" href="/css/common/common.css">
   <title>GREAT 공지사항 작성글보기</title>
 <body>
@@ -51,26 +51,28 @@
     </nav>
   </header>
   <main class="container">
-    <form class="article " method="post" th:object="${writeForm}">
-      <div class="article__title ">
+    <form class="notice" method="post" th:object="${detailForm}">
+      <div class="notice__title ">
         <h2>글 제목 :
           <text th:text="*{title}">[공지사항] 개인정보 처리방침 변경안내처리방침</text>
+          <text th:text="*{noticeId}">[공지사항] 개인정보 처리방침 변경안내처리방침</text>
         </h2>
-      </div>
-      <div class="article__information">
-        <div class="article__write-information">
-          <span class="font-size--12px">2022.08.12</span>
-          <span>|</span>
-          <span class="font-size--12px">조회 18</span>
+        <div class="notice__information">
+          <div class="notice__write-information">
+            <span class="font-size--12px">2022.08.12</span>
+            <span>|</span>
+            <span class="font-size--12px">조회 18</span>
+          </div>
         </div>
       </div>
-      <div class="article__content ">
+      <div class="notice__content ">
           <textarea th:text="*{content}" cols="140" rows="30"
                     name="content">[공지사항] 개인정보 처리방침 변경안내처리방침[공지사항] 개인정보 처리방침 변경안내처리방침[공지사항] 개인정보 처리방침 변경안내처리방침[공지사항] 개인정보 처리방침 변경안내처리방침[공지사항] 개인정보 처리방침 변경안내처리방침[공지사항] 개인정보 처리방침 변경안내처리방침[공지사항] 개인정보 처리방침 변경안내처리방침[공지사항] 개인정보 처리방침 변경안내처리방침[공지사항] 개인정보 처리방침 변경안내처리방침[공지사항] 개인정보 처리방침 변경안내처리방침[공지사항] 개인정보 처리방침 변경안내처리방침[공지사항] 개인정보 처리방침 변경안내처리방침[공지사항] 개인정보 처리방침 변경안내처리방침[공지사항] 개인정보 처리방침 변경안내처리방침[공지사항] 개인정보 처리방침 변경안내처리방침[공지사항] 개인정보 처리방침 변경안내처리방침[공지사항] 개인정보 처리방침 변경안내처리방침[공지사항] 개인정보 처리방침 변경안내처리방침[공지사항] 개인정보 처리방침 변경안내처리방침 </textarea>
-        <div class="article__btn-box">
-          <button id="modify_btn">수정</button>
+        <div class="notice__btn-box">
+          <button type="button"><a id="modify_btn" th:href="@{/notice/edit/{id}(id=${detailForm.noticeId})}">수정</a>
+          </button>
           <button type="button" id="submit_btn">목록</button>
-          <button type="button" onclick="button_event();" class="delete">삭제</button>
+          <button type="button" id="delBtn" class="delete">삭제</button>
         </div>
       </div>
     </form>
@@ -107,10 +109,11 @@
 </div>
 <script>
     //수정버튼
-   const $modifyBtn = document.getElementById('modify_btn');
-    $modifyBtn.addEventListener('click', e => {
-      location.href = '/notice/{id}/edit}';
+    const $modifyBtn = document.getElementById('modify_btn');
+      $modifyBtn.addEventListener('click', e => {
+      location.href = '/notice/edit/[[${detailForm.noticeId}]]';
     });
+
 
     //목록버튼
     const $submitBtn = document.getElementById('submit_btn');
@@ -118,13 +121,19 @@
       location.href = '/notice';
     });
 
-    function button_event() {
-      if (confirm("정말 삭제하시겠습니까??") == true) {    //확인
-        document.form.submit();
-      } else {   //취소
-        return;
-      }
-    }
+    //삭제버튼
+     const $delBtn = document.getElementById('delBtn');
+      $delBtn.addEventListener('click', e => {
+        if(!confirm('삭제하시겠습니까?')) return;
+      location.href = '/notice/[[${detailForm.noticeId}]]/del';
+    });
+
+
+
+
+
+
+
 </script>
 </body>
 </html>
