--- a/src/main/resources/templates/notice/noticeModifyForm.html
+++ b/src/main/resources/templates/notice/noticeModifyForm.html
@@ -69,7 +69,7 @@
       <div class="board-write__complete width--1000px"
       th:action="@{/notice/{id}(id=${editForm.noticeId})}">
         <button type="button" id="cancelBtn"><a href="">취소</a></button>
-        <button type="button" id="modifyBtn">수정</button>
+        <button id="modifyBtn">수정</button>
       </div>
     </form>
   </main>
