공지사항 수정중입니다

--- a/src/main/resources/templates/notice/noticeViewForm.html
+++ b/src/main/resources/templates/notice/noticeViewForm.html
@@ -62,12 +62,14 @@
             <span class="font-size--12px">2022.08.12</span>
             <span>|</span>
             <span class="font-size--12px">조회 18</span>
+
           </div>
         </div>
       </div>
       <div class="notice__content ">
           <textarea th:text="*{content}" cols="140" rows="30"
                     name="content" readonly>[공지사항] 개인정보 처리방침 변경안내처리방침[공지사항] 개인정보 처리방침 변경안내처리방침[공지사항] 개인정보 처리방침 변경안내처리방침[공지사항] 개인정보 처리방침 변경안내처리방침[공지사항] 개인정보 처리방침 변경안내처리방침[공지사항] 개인정보 처리방침 변경안내처리방침[공지사항] 개인정보 처리방침 변경안내처리방침[공지사항] 개인정보 처리방침 변경안내처리방침[공지사항] 개인정보 처리방침 변경안내처리방침[공지사항] 개인정보 처리방침 변경안내처리방침[공지사항] 개인정보 처리방침 변경안내처리방침[공지사항] 개인정보 처리방침 변경안내처리방침[공지사항] 개인정보 처리방침 변경안내처리방침[공지사항] 개인정보 처리방침 변경안내처리방침[공지사항] 개인정보 처리방침 변경안내처리방침[공지사항] 개인정보 처리방침 변경안내처리방침[공지사항] 개인정보 처리방침 변경안내처리방침[공지사항] 개인정보 처리방침 변경안내처리방침[공지사항] 개인정보 처리방침 변경안내처리방침 </textarea>
+
         <div class="notice__btn-box">
           <button type="button"><a id="modify_btn" th:href="@{/notice/edit/{id}(id=${detailForm.noticeId})}">수정</a>
           </button>
@@ -134,6 +136,8 @@
 
 
 
+
+
 </script>
 </body>
-</html>
+</head></head></html>
