--- a/src/main/resources/templates/notice/noticeMainForm.html
+++ b/src/main/resources/templates/notice/noticeMainForm.html
@@ -73,59 +73,160 @@
               <th>조회수</th>
             </tr>
             </thead>
-            <tbody>
-            <tr th:each="notice :${listForm}">
-              <td><input type="checkbox" class="check"></td>
-              <td class="noticeId" th:text="${notice.noticeId}">5</td>
-              <td class="noticeTitle"><a
-                  th:href="@{/notice/{id}(id=${notice.noticeId})}"
-                  onclick="" href="#" th:text="${notice.title}"></a></td>
-              <td class="noticeUdate" th:text="${{notice.udate}}">2022.08.08</td>
-              <td th:text="${notice.write}">관리자</td>
-              <td th:text="${notice.count}">10</td>
-            </tr>
+            <!--            <tbody>-->
+            <!--            <tr th:each="notice :${listForm}">-->
+            <!--              <td><input type="checkbox" class="check"></td>-->
+            <!--              <td class="noticeId" th:text="${notice.noticeId}">5</td>-->
+            <!--              <td class="noticeTitle"><a-->
+            <!--                  th:href="@{/notice/{id}(id=${notice.noticeId})}"-->
+            <!--                  onclick="" href="#" th:text="${notice.title}"></a></td>-->
+            <!--              <td class="noticeUdate" th:text="${{notice.udate}}">2022.08.08</td>-->
+            <!--              <td th:text="${notice.write}">관리자</td>-->
+            <!--              <td th:text="${notice.count}">10</td>-->
+            <!--            </tr>-->
 
+            <!--            </tbody>-->
+            <!--          </table>-->
+            <!--          <div class="check__del">-->
+            <!--            <input type="checkbox" name="" id="allChk"><span>전체선택</span>-->
+            <!--          </div>-->
+            <!--          <div class="btn__content">-->
+            <!--            <button type="button" id="post__text-btn">글쓰기</button>-->
+            <!--            <button type="button" onclick="button_event();" class="btn__text">삭제</button>-->
+            <!--          </div>-->
+            <!--          <div class="text__center">-->
+            <!--            <ul class="pagination">-->
+            <!--              <li><a href="">처음</a></li>-->
+            <!--              <li><a href="">이전</a></li>-->
+            <!--              <li><a href="">1</a></li>-->
+            <!--              <li><a href="">2</a></li>-->
+            <!--              <li><a href="">3</a></li>-->
+            <!--              <li><a href="">4</a></li>-->
+            <!--              <li><a href="">5</a></li>-->
+            <!--              <li><a href="">다음</a></li>-->
+            <!--              <li><a href="">마지막</a></li>-->
+            <!--            </ul>-->
+            <!--          </div>-->
+            <!--          &lt;!&ndash; notice-board__search  &ndash;&gt;-->
+            <!--          <div class="notice-board__search">-->
+            <!--            <div class="notice-board__search-box">-->
+            <!--              <div class="notice-board__search-setting">-->
+            <!--                <select name="searchType" id="searchType">-->
+            <!--                  <option th:value="titleOrContent">제목+내용</option>-->
+            <!--                  <option th:value="title">제목</option>-->
+            <!--                  <option th:value="write">작성자</option>-->
+            <!--                </select>-->
+            <!--              </div>-->
+            <!--              <div class="notice-board__search-keyword">-->
+            <!--                <input type="text" id="keyword" name="keyword"><a href="" class="search__search-icon">-->
+            <!--                <button><i class="fa-solid fa-magnifying-glass">검색</i></button>-->
+            <!--              </a>-->
+            <!--              </div>-->
+            <!--            </div>-->
+            <!--          </div>-->
+            <!--        </div>-->
+            <!--      </div>-->
+            <!--    </form>-->
+            <!--  </main>-->
+            <tbody>
+            <tr th:each="notice:${list}">
+              <td th:class="noticeId" th:text="${notice.noticeId}">1</td>
+              <td th:class="attachment">
+                <th:block th:if="${notice.attachment == 'Y'}">
+                  <!--                    <span><i class="fa-regular fa-image"></i></span>-->
+                  <span><i class="fa-solid fa-image"></i></span>
+                </th:block>
+                <th:block th:if="${notice.attachment == 'N'}">
+                  <span><i class="fa-regular fa-file-lines"></i></span>
+                </th:block>
+              </td>
+              <td class="articleTitle">
+                <a th:href="@{/notice/{id}(id=${notice.noticeId})}"
+                   th:text="${notice.title}">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi,
+                  architecto!</a>
+              </td>
+              <td th:class="udate" th:text="${{notice.udate}}">2022.08.01</td>
+              <td th:class="count" th:text="${notice.count}">11</td>
+            </tr>
             </tbody>
           </table>
-          <div class="check__del">
-            <input type="checkbox" name="" id="allChk"><span>전체선택</span>
-          </div>
-          <div class="btn__content">
-            <button type="button" id="post__text-btn">글쓰기</button>
-            <button type="button" onclick="button_event();" class="btn__text">삭제</button>
-          </div>
-          <div class="text__center">
-            <ul class="pagination">
-              <li><a href="">처음</a></li>
-              <li><a href="">이전</a></li>
-              <li><a href="">1</a></li>
-              <li><a href="">2</a></li>
-              <li><a href="">3</a></li>
-              <li><a href="">4</a></li>
-              <li><a href="">5</a></li>
-              <li><a href="">다음</a></li>
-              <li><a href="">마지막</a></li>
-            </ul>
-          </div>
-          <!-- notice-board__search  -->
-          <div class="notice-board__search">
-            <div class="notice-board__search-box">
-              <div class="notice-board__search-setting">
-                <select name="searchType" id="searchType">
-                  <option th:value="titleOrContent">제목+내용</option>
-                  <option th:value="title">제목</option>
-                  <option th:value="write">작성자</option>
-                </select>
-              </div>
-              <div class="notice-board__search-keyword">
-                <input type="text" id="keyword" name="keyword"><a href="" class="search__search-icon">
-                <button><i class="fa-solid fa-magnifying-glass">검색</i></button></a>
-              </div>
-            </div>
-            </div>
+        </div>
+        <div class="board__write width--900px">
+          <button id="board__post-btn">글쓰기</button>
+        </div>
+        <!--        <div class="board__page width&#45;&#45;900px">-->
+        <!--          <div class="board__page&#45;&#45;select">-->
+        <!--            <a href=""><i class="fa-solid fa-chevron-left"></i>이전</a>-->
+        <!--            <a href="">1</a>-->
+        <!--            <a href="">2</a>-->
+        <!--            <a href="">3</a>-->
+        <!--            <a href="">4</a>-->
+        <!--            <a href="">5</a>-->
+        <!--            <a href="">다음<i class="fa-solid fa-chevron-right"></i></a>-->
+        <!--          </div>-->
+        <!--        </div>-->
+        <!--        <div class="board__search width&#45;&#45;900px">-->
+        <!--          <form class="board__search-box" th:object="${articleSearchForm}" th:action="@{/community/search}">-->
+        <!--            <div class="board__search-setting">-->
+        <!--              <select name="" id="search-category" th:field="*{searchCategory}">-->
+        <!--                <option value="title">제목</option>-->
+        <!--                <option value="contents">내용</option>-->
+        <!--                <option value="titleOrContents">제목+내용</option>-->
+        <!--                <option value="nickname">닉네임</option>-->
+        <!--              </select>-->
+        <!--            </div>-->
+        <!--            <div class="board__search-keyword">-->
+        <!--              <input type="text" th:field="*{searchKeyword}"><button class="search__search-icon"><i-->
+        <!--                  class="fa-solid fa-magnifying-glass"></i></button>-->
+        <!--            </div>-->
+        <!--          </form>-->
+        <!--        </div>-->
+        <div class="community-page">
+          <!--이전페이지정보-->
+          <th:block th:if="${fc.prev}">
+            <a class="community-page-item" href=""
+               th:href="@{/notice/list/1/{searchType}/{keyword}(searchType=${fc.searchType},keyword=${fc.keyword})}">
+              <i class="fas fa-angle-double-left"></i>
+            </a>
+            <a class="community-page-item" href=""
+               th:href="@{/notice/list/{reqPage}/{searchType}/{keyword}(reqPage=${fc.startPage-1},searchType=${fc.searchType},keyword=${fc.keyword})}">
+              <i class="fas fa-angle-left"></i>
+            </a>
+          </th:block>
+
+          <!--페이지표시-->
+          <th:block th:each="pnum : ${#numbers.sequence(fc.startPage,fc.endPage)}">
+            <th:block th:if="${pnum != 0}">
+              <!--                  <a class="community-page-item" th:classappend="${fc.rc.reqPage == pnum} ? 'active'" href="" th:href="@{|/community/list/${pnum}|}" th:text="${pnum}">1</a>-->
+              <a class="community-page-item" th:classappend="${fc.rc.reqPage == pnum} ? 'active'" href=""
+                 th:href="@{/notice/list/{reqPage}/{searchType}/{keyword}(reqPage=${pnum},searchType=${fc.searchType},keyword=${fc.keyword})}"
+                 th:text="${pnum}">1</a>
+            </th:block>
+          </th:block>
+
+          <!--다음페이지정보-->
+          <th:block th:if="${fc.next}">
+            <a class="community-page-item" href=""
+               th:href="@{/notice/list/{reqPage}/{searchType}/{keyword}(reqPage=${fc.endPage+1},searchType=${fc.searchType},keyword=${fc.keyword})}">
+              <i class="fas fa-angle-right"></i>
+            </a>
+            <a class="community-page-item" href=""
+               th:href="@{/notice/list/{reqPage}/{searchType}/{keyword}(reqPage=${fc.finalEndPage},searchType=${fc.searchType},keyword=${fc.keyword})}">
+              <i class="fas fa-angle-double-right"></i>
+            </a>
+          </th:block>
+        </div>
+
+        <div class="community-search">
+          <select id="searchType" name="searchType" th:field="${fc.searchType}">
+            <option th:value="title">제목</option>
+            <option th:value="contents">내용</option>
+            <option th:value="titleOrContents">제목+내용</option>
+          </select>
+          <input type="text" id="keyword" name="keyword" th:field="${fc.keyword}">
+          <button id="searchBtn">검색</button>
         </div>
       </div>
-</form>
 </main>
 <!--Basic structure of footer-->
 <footer class="footer">
@@ -181,6 +282,10 @@
         return;
       }
     }
+
+
+
+
 </script>
 </body>
 </html>
